feat: 商户查询缓存-添加商户缓存

--- a/hy-dianping/src/main/resources/application.yml
+++ b/hy-dianping/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
 mybatis-plus:
   type-aliases-package: com.hydp.entity #别名扫描包
   configuration:
-    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 logging:
   level:
