--- a/hy-dianping/src/main/resources/application.yml
+++ b/hy-dianping/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     password: XHPszFLy8P3yk73w
 
   redis:
-    host: 101.34.210.50
+    host: localhost
     port: 6379
-    password: 123321
+#    password: 123321
     lettuce:
       pool:
         max-active: 10
